test/features/errors/semantic/e1031_missing_trait_method.spl
# E1031: Missing Trait Method

Feature: E1031 - Missing Trait Method Implementation
  As a Simple compiler
  I want to detect when required trait methods are not implemented
  So that trait implementations are complete

  Background:
    Given I have the Simple compiler

  Scenario: Missing required trait method
    When I compile:
      '''
      trait Display:
        fn show(self) -> str

      struct Point:
        x: i32
        y: i32

      impl Display for Point:
        # Error: missing `show` method
      '''
    Then I should see error E1031 at line 8
    And the error message should be "method `{method}` required by trait `{trait_name}` is not implemented"
    And the label should indicate "missing method implementation"
    And the help should suggest "implement all required trait methods"

  Scenario: Partial trait implementation
    When I compile:
      '''
      trait Calculator:
        fn add(self, other: i32) -> i32
        fn sub(self, other: i32) -> i32
        fn mul(self, other: i32) -> i32

      struct Counter:
        value: i32

      impl Calculator for Counter:
        fn add(self, other: i32) -> i32:
          self.value + other
        # Error: missing sub and mul
      '''
    Then I should see error E1031
    And the error should indicate multiple missing methods

  Scenario: Complete trait implementation
    When I compile:
      '''
      trait Display:
        fn show(self) -> str

      struct Point:
        x: i32
        y: i32

      impl Display for Point:
        fn show(self) -> str:
          "Point({self.x}, {self.y})"
      '''
    Then compilation should succeed

  Scenario: Trait with default method implementations
    When I compile:
      '''
      trait Logger:
        fn log(self, msg: str):
          print(msg)  # Default implementation

      struct MyLogger:
        prefix: str

      impl Logger for MyLogger:
        # OK: can use default implementation
      '''
    Then compilation should succeed

  Scenario: Method signature mismatch
    When I compile:
      '''
      trait Display:
        fn show(self) -> str

      struct Point:
        x: i32

      impl Display for Point:
        fn show(self) -> i32:  # Error: wrong return type
          42
      '''
    Then I should see error related to type mismatch

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      trait Display:
        fn show(self) -> str

      struct Point:
        x: i32

      impl Display for Point:
        # Missing show method
      '''
    Then I should see error E1031
    And the error message should contain "트레이트 메서드 누락"
